[project]
name = "codika_dart_services"
version = "0.1.1"
description = "Shared Dart analysis services for Codika projects"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Luca Derumier", email="luca@codika.io" },
    { name="Romain Pattyn", email="romain@codika.io" },
]
license = "MIT"
dependencies = [
    "PyYAML>=6.0",
] 